@@ -1,0 +1,2 @@
+all : 
+	gcc -c -Wall -Werror -I$(HOME)/opt/include depends.c
